// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common/Alpha Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful__alpha"
  >
    <div
      class="react-colorful__alpha-gradient"
    />
    <div
      aria-label="Alpha"
      aria-valuetext="20%"
      class="react-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="react-colorful__pointer react-colorful__alpha-pointer"
        style="top: 50%; left: 20%;"
      >
        <div
          class="react-colorful__pointer-fill"
          style="background-color: rgba(65, 65, 65, 0.2);"
        />
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    {
  "a": 0.2
}
  </div>
</DocumentFragment>
`;

exports[`Common/AlphaColorPicker Hex 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 69%, Brightness 87%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 13%; left: 69%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(69, 69, 69);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue"
    >
      <div
        aria-label="Hue"
        aria-valuetext="353"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 98.05555555555556%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__alpha react-colorful__last-control"
    >
      <div
        class="react-colorful__alpha-gradient"
      />
      <div
        aria-label="Alpha"
        aria-valuetext="100%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__alpha-pointer"
          style="top: 50%; left: 100%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(69, 69, 69);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    #dd4455
  </div>
</DocumentFragment>
`;

exports[`Common/AlphaColorPicker Rgba 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 89%, Brightness 75%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 25%; left: 89%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(21, 21, 21);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue"
    >
      <div
        aria-label="Hue"
        aria-valuetext="287"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 79.72222222222223%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__alpha react-colorful__last-control"
    >
      <div
        class="react-colorful__alpha-gradient"
      />
      <div
        aria-label="Alpha"
        aria-valuetext="50%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__alpha-pointer"
          style="top: 50%; left: 50%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgba(21, 21, 21, 0.5);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    {
  "r": 154,
  "g": 22,
  "b": 192,
  "a": 0.5
}
  </div>
</DocumentFragment>
`;

exports[`Common/ColorPicker Hex 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 69%, Brightness 87%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 13%; left: 69%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(69, 69, 69);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue react-colorful__last-control"
    >
      <div
        aria-label="Hue"
        aria-valuetext="353"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 98.05555555555556%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    #dd4455
  </div>
</DocumentFragment>
`;

exports[`Common/ColorPicker Rgb 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 89%, Brightness 75%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 25%; left: 89%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(21, 21, 21);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue react-colorful__last-control"
    >
      <div
        aria-label="Hue"
        aria-valuetext="287"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 79.72222222222223%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    {
  "r": 154,
  "g": 22,
  "b": 192
}
  </div>
</DocumentFragment>
`;

exports[`Common/Hue Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful__hue"
  >
    <div
      aria-label="Hue"
      aria-valuetext="213"
      class="react-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="react-colorful__pointer react-colorful__hue-pointer"
        style="top: 50%; left: 59.166666666666664%;"
      >
        <div
          class="react-colorful__pointer-fill"
          style="background-color: rgb(0, 0, 0);"
        />
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    {
  "h": 213
}
  </div>
</DocumentFragment>
`;

exports[`Common/Interactive Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful__interactive"
    role="slider"
    tabindex="0"
  >
    <input
      value="use keyboad and mouse move"
    />
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    key: 
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    move: 
  </div>
</DocumentFragment>
`;

exports[`Common/Pointer Overview 1`] = `
<DocumentFragment>
  <div
    style="position: relative; height: 50px;"
  >
    <div
      class="react-colorful__pointer react-colorful__alpha-pointer"
      style="top: 50%; left: 20%;"
    >
      <div
        class="react-colorful__pointer-fill"
        style="background-color: rgba(65, 65, 65, 0.2);"
      />
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    {
  "h": 213,
  "s": 50,
  "v": 50,
  "a": 0.2
}
  </div>
</DocumentFragment>
`;

exports[`Common/Saturation Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful__saturation"
    style="background-color: rgb(0, 0, 0);"
  >
    <div
      aria-label="Color"
      aria-valuetext="Saturation 50%, Brightness 50%"
      class="react-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="react-colorful__pointer react-colorful__saturation-pointer"
        style="top: 50%; left: 50%;"
      >
        <div
          class="react-colorful__pointer-fill"
          style="background-color: rgb(65, 65, 65);"
        />
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    {
  "s": 50,
  "v": 50
}
  </div>
</DocumentFragment>
`;

exports[`Components/HexColorPicker Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(255, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 100%, Brightness 60%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 40%; left: 100%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(153, 0, 0);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue react-colorful__last-control"
    >
      <div
        aria-label="Hue"
        aria-valuetext="0"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 0%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(255, 0, 0);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    #990000
  </div>
</DocumentFragment>
`;

exports[`Components/HslColorPicker Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 67%, Brightness 24%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 76%; left: 66.66666666666666%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(20, 20, 20);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue react-colorful__last-control"
    >
      <div
        aria-label="Hue"
        aria-valuetext="213"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 59.166666666666664%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    {
  "h": 213,
  "s": 50,
  "l": 16
}
  </div>
</DocumentFragment>
`;

exports[`Components/HslStringColorPicker Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(255, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 0%, Brightness 0%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 100%; left: 0%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue react-colorful__last-control"
    >
      <div
        aria-label="Hue"
        aria-valuetext="0"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 0%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(255, 0, 0);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    hsl(213, 50%, 16%
  </div>
</DocumentFragment>
`;

exports[`Components/HslaColorPicker Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 67%, Brightness 24%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 76%; left: 66.66666666666666%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(20, 20, 20);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue"
    >
      <div
        aria-label="Hue"
        aria-valuetext="213"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 59.166666666666664%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__alpha react-colorful__last-control"
    >
      <div
        class="react-colorful__alpha-gradient"
      />
      <div
        aria-label="Alpha"
        aria-valuetext="50%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__alpha-pointer"
          style="top: 50%; left: 50%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgba(20, 20, 20, 0.5);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    {
  "h": 213,
  "s": 50,
  "l": 16,
  "a": 0.5
}
  </div>
</DocumentFragment>
`;

exports[`Components/HslaStringColorPicker Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(255, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 0%, Brightness 0%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 100%; left: 0%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue"
    >
      <div
        aria-label="Hue"
        aria-valuetext="0"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 0%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(255, 0, 0);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__alpha react-colorful__last-control"
    >
      <div
        class="react-colorful__alpha-gradient"
      />
      <div
        aria-label="Alpha"
        aria-valuetext="100%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__alpha-pointer"
          style="top: 50%; left: 100%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    hsla(213, 50%, 16%, 0.5
  </div>
</DocumentFragment>
`;

exports[`Components/HsvColorPicker Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 50%, Brightness 50%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 50%; left: 50%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(65, 65, 65);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue react-colorful__last-control"
    >
      <div
        aria-label="Hue"
        aria-valuetext="213"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 59.166666666666664%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    {
  "h": 213,
  "s": 50,
  "v": 50
}
  </div>
</DocumentFragment>
`;

exports[`Components/HsvStringColorPicker Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(255, 255, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 96%, Brightness 97%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 3.0000000000000027%; left: 96%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(247, 247, 8);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue react-colorful__last-control"
    >
      <div
        aria-label="Hue"
        aria-valuetext="1"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 0.2777777777777778%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(255, 255, 0);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    hsv(1, 96%, 97%)
  </div>
</DocumentFragment>
`;

exports[`Components/HsvaColorPicker Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 50%, Brightness 50%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 50%; left: 50%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(65, 65, 65);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue"
    >
      <div
        aria-label="Hue"
        aria-valuetext="213"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 59.166666666666664%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__alpha react-colorful__last-control"
    >
      <div
        class="react-colorful__alpha-gradient"
      />
      <div
        aria-label="Alpha"
        aria-valuetext="20%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__alpha-pointer"
          style="top: 50%; left: 20%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgba(65, 65, 65, 0.2);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    {
  "h": 213,
  "s": 50,
  "v": 50,
  "a": 0.2
}
  </div>
</DocumentFragment>
`;

exports[`Components/HsvaStringColorPicker Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(255, 255, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 96%, Brightness 97%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 3.0000000000000027%; left: 96%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(247, 247, 8);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue"
    >
      <div
        aria-label="Hue"
        aria-valuetext="1"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 0.2777777777777778%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(255, 255, 0);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__alpha react-colorful__last-control"
    >
      <div
        class="react-colorful__alpha-gradient"
      />
      <div
        aria-label="Alpha"
        aria-valuetext="20%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__alpha-pointer"
          style="top: 50%; left: 20%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgba(247, 247, 8, 0.2);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    hsv(1, 96%, 97%, 0.2)
  </div>
</DocumentFragment>
`;

exports[`Components/RgbColorPicker Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 255);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 92%, Brightness 84%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 16.000000000000004%; left: 92%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(17, 17, 212);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue react-colorful__last-control"
    >
      <div
        aria-label="Hue"
        aria-valuetext="10"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 2.7777777777777777%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 255);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    {
  "r": 213,
  "g": 50,
  "b": 16
}
  </div>
</DocumentFragment>
`;

exports[`Components/RgbStringColorPicker Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 255);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 92%, Brightness 84%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 16.000000000000004%; left: 92%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(17, 17, 212);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue react-colorful__last-control"
    >
      <div
        aria-label="Hue"
        aria-valuetext="10"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 2.7777777777777777%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 255);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    rgb(213, 50, 16)
  </div>
</DocumentFragment>
`;

exports[`Components/RgbaColorPicker Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 255);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 92%, Brightness 84%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 16.000000000000004%; left: 92%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(17, 17, 212);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue"
    >
      <div
        aria-label="Hue"
        aria-valuetext="10"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 2.7777777777777777%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 255);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__alpha react-colorful__last-control"
    >
      <div
        class="react-colorful__alpha-gradient"
      />
      <div
        aria-label="Alpha"
        aria-valuetext="20%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__alpha-pointer"
          style="top: 50%; left: 20%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgba(17, 17, 212, 0.2);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    {
  "r": 213,
  "g": 50,
  "b": 16,
  "a": 0.2
}
  </div>
</DocumentFragment>
`;

exports[`Components/RgbaStringColorPicker Overview 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 255);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 92%, Brightness 84%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 16.000000000000004%; left: 92%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(17, 17, 212);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue"
    >
      <div
        aria-label="Hue"
        aria-valuetext="10"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 2.7777777777777777%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 255);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__alpha react-colorful__last-control"
    >
      <div
        class="react-colorful__alpha-gradient"
      />
      <div
        aria-label="Alpha"
        aria-valuetext="20%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__alpha-pointer"
          style="top: 50%; left: 20%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgba(17, 17, 212, 0.2);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    rgb(213, 50, 16, 0.2)
  </div>
</DocumentFragment>
`;

exports[`Input/HexColorInput Overview 1`] = `
<DocumentFragment>
  <input
    spellcheck="false"
    value="990000"
  />
</DocumentFragment>
`;
